--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://kuurdiii.github.io/todoapp",
   "devDependencies": {
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
